--- a/Assets/Scripts/Editor/ChunkIndexEditor.uxml
+++ b/Assets/Scripts/Editor/ChunkIndexEditor.uxml
@@ -1,9 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
-<engine:UXML
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xmlns:engine="UnityEngine.UIElements"
-    xmlns:editor="UnityEditor.UIElements"
-    xsi:noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd"
->
-    
+<engine:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:engine="UnityEngine.UIElements" xmlns:editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
+    <engine:Vector3IntField label="Index" focusable="true" enabled="false" tooltip="The index of the chunk" name="IndexField" style="height: 21px; flex-direction: row; align-items: flex-end; width: 342px; justify-content: flex-end; align-self: stretch;" />
 </engine:UXML>
